# just-os

./: Cargo.toml  README.md
.cargo/: config.toml
src/: allocator.rs  error.rs  gdt.rs  geometry.rs  interrupts.rs  io.rs  lib.rs  log.rs  main.rs  memory.rs  qemu_exit.rs  rtc.rs  serial.rs  stream.rs  task.rs  tui.rs  vga_buffer.rs  vga_video.rs  video.rs
src/command/: Command.rs  command.rs  command_register.rs  cpuid_command.rs  mod.rs  ping_pong_command.rs
src/geometry/: position.rs  rect.rs  size.rs
src/task/: executor.rs  keyboard.rs  simple_executor.rs
src/tui/: mod.rs  panic_screen.rs  terminal_screen.rs  text_screen.rs
src/vga_video/: color.rs  cursor.rs  frame_buffer.rs  mock_frame_buffer.rs  screen_buffer.rs  screen_fragment_writer.rs  screen_writer.rs  vga_frame_buffer.rs
src/video/: color.rs  screen_buffer.rs  screen_writer.rs
