[package]
name = "just-os"
version = "0.0.1"
edition = "2021"
description = "Just Operating System"
authors = ["Piotr Merski <merskip@gmail.com>"]
readme = "README.md"
repository = "https://github.com/merskip/just-os"

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
volatile = "0.4.5"
spin = "0.9.8"
x86_64 = "0.14.10"
x86 = "0.52.0"
pic8259 = "0.10.2"
uart_16550 = "0.2.18"
pc-keyboard = "0.6.1"
linked_list_allocator = "0.10.0"
bitflags = "1.3.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.8"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3.2"
default-features = false

[dependencies.futures-util]
version = "0.3.25"
default-features = false
features = ["alloc"]

[package.metadata.bootimage]
test-args = [
    "-device","isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1
